src/frontend/grammar/SecureLangParser.py
# Generated from d:/compiler-design/captsone-Secure_compiler/src/frontend/grammar/SecureLang.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SecureLangParser ( Parser ):

    grammarFileName = "SecureLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'def'", "'if'", "'else'", "'while'", 
                     "'for'", "'in'", "'return'", "'import'", "'from'", 
                     "'and'", "'or'", "'not'", "'True'", "'False'", "'None'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'('", "')'", 
                     "'{'", "'}'", "'['", "']'", "','", "':'", "'.'", "'='", 
                     "'+'", "'-'", "'*'", "'/'", "'//'", "'%'", "'**'", 
                     "'<'", "'>'", "'=='", "'>='", "'<='", "'!='" ]

    symbolicNames = [ "<INVALID>", "DEF", "IF", "ELSE", "WHILE", "FOR", 
                      "IN", "RETURN", "IMPORT", "FROM", "AND", "OR", "NOT", 
                      "TRUE", "FALSE", "NONE", "IDENTIFIER", "NUMBER", "STRING", 
                      "COMMENT", "BLOCK_COMMENT", "NEWLINE", "WS", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "LBRACK", "RBRACK", 
                      "COMMA", "COLON", "DOT", "ASSIGN", "PLUS", "MINUS", 
                      "STAR", "SLASH", "DSLASH", "PERCENT", "POWER", "LT", 
                      "GT", "EQ", "GE", "LE", "NE" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_functionDef = 2
    RULE_parameterList = 3
    RULE_block = 4
    RULE_ifStatement = 5
    RULE_whileStatement = 6
    RULE_forStatement = 7
    RULE_returnStatement = 8
    RULE_assignment = 9
    RULE_expressionStatement = 10
    RULE_importStatement = 11
    RULE_dottedName = 12
    RULE_expression = 13
    RULE_orExpr = 14
    RULE_andExpr = 15
    RULE_notExpr = 16
    RULE_comparison = 17
    RULE_compOp = 18
    RULE_addExpr = 19
    RULE_mulExpr = 20
    RULE_unaryExpr = 21
    RULE_powerExpr = 22
    RULE_atomExpr = 23
    RULE_trailer = 24
    RULE_atom = 25
    RULE_listLiteral = 26
    RULE_dictLiteral = 27
    RULE_dictEntry = 28
    RULE_argumentList = 29
    RULE_argument = 30
    RULE_memberAccess = 31

    ruleNames =  [ "program", "statement", "functionDef", "parameterList", 
                   "block", "ifStatement", "whileStatement", "forStatement", 
                   "returnStatement", "assignment", "expressionStatement", 
                   "importStatement", "dottedName", "expression", "orExpr", 
                   "andExpr", "notExpr", "comparison", "compOp", "addExpr", 
                   "mulExpr", "unaryExpr", "powerExpr", "atomExpr", "trailer", 
                   "atom", "listLiteral", "dictLiteral", "dictEntry", "argumentList", 
                   "argument", "memberAccess" ]

    EOF = Token.EOF
    DEF=1
    IF=2
    ELSE=3
    WHILE=4
    FOR=5
    IN=6
    RETURN=7
    IMPORT=8
    FROM=9
    AND=10
    OR=11
    NOT=12
    TRUE=13
    FALSE=14
    NONE=15
    IDENTIFIER=16
    NUMBER=17
    STRING=18
    COMMENT=19
    BLOCK_COMMENT=20
    NEWLINE=21
    WS=22
    LPAREN=23
    RPAREN=24
    LBRACE=25
    RBRACE=26
    LBRACK=27
    RBRACK=28
    COMMA=29
    COLON=30
    DOT=31
    ASSIGN=32
    PLUS=33
    MINUS=34
    STAR=35
    SLASH=36
    DSLASH=37
    PERCENT=38
    POWER=39
    LT=40
    GT=41
    EQ=42
    GE=43
    LE=44
    NE=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SecureLangParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.NEWLINE)
            else:
                return self.getToken(SecureLangParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SecureLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SecureLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SecureLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SecureLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 64
                self.match(SecureLangParser.NEWLINE)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25946485686) != 0):
                self.state = 70
                self.statement()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 71
                    self.match(SecureLangParser.NEWLINE)
                    self.state = 76
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 81
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 82
            self.match(SecureLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDef(self):
            return self.getTypedRuleContext(SecureLangParser.FunctionDefContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(SecureLangParser.IfStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(SecureLangParser.WhileStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(SecureLangParser.ForStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(SecureLangParser.ReturnStatementContext,0)


        def assignment(self):
            return self.getTypedRuleContext(SecureLangParser.AssignmentContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionStatementContext,0)


        def importStatement(self):
            return self.getTypedRuleContext(SecureLangParser.ImportStatementContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SecureLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 92
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.functionDef()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.ifStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.whileStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.forStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 88
                self.returnStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 89
                self.assignment()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 90
                self.expressionStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 91
                self.importStatement()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(SecureLangParser.DEF, 0)

        def IDENTIFIER(self):
            return self.getToken(SecureLangParser.IDENTIFIER, 0)

        def LPAREN(self):
            return self.getToken(SecureLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(SecureLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(SecureLangParser.BlockContext,0)


        def parameterList(self):
            return self.getTypedRuleContext(SecureLangParser.ParameterListContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_functionDef

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDef" ):
                listener.enterFunctionDef(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDef" ):
                listener.exitFunctionDef(self)




    def functionDef(self):

        localctx = SecureLangParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.match(SecureLangParser.DEF)
            self.state = 95
            self.match(SecureLangParser.IDENTIFIER)
            self.state = 96
            self.match(SecureLangParser.LPAREN)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==16:
                self.state = 97
                self.parameterList()


            self.state = 100
            self.match(SecureLangParser.RPAREN)
            self.state = 101
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.IDENTIFIER)
            else:
                return self.getToken(SecureLangParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.COMMA)
            else:
                return self.getToken(SecureLangParser.COMMA, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_parameterList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterList" ):
                listener.enterParameterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterList" ):
                listener.exitParameterList(self)




    def parameterList(self):

        localctx = SecureLangParser.ParameterListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameterList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(SecureLangParser.IDENTIFIER)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==29:
                self.state = 104
                self.match(SecureLangParser.COMMA)
                self.state = 105
                self.match(SecureLangParser.IDENTIFIER)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(SecureLangParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(SecureLangParser.RBRACE, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.NEWLINE)
            else:
                return self.getToken(SecureLangParser.NEWLINE, i)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SecureLangParser.StatementContext)
            else:
                return self.getTypedRuleContext(SecureLangParser.StatementContext,i)


        def getRuleIndex(self):
            return SecureLangParser.RULE_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)




    def block(self):

        localctx = SecureLangParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(SecureLangParser.LBRACE)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==21:
                self.state = 112
                self.match(SecureLangParser.NEWLINE)
                self.state = 117
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 25946485686) != 0):
                self.state = 118
                self.statement()
                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==21:
                    self.state = 119
                    self.match(SecureLangParser.NEWLINE)
                    self.state = 124
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 130
            self.match(SecureLangParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(SecureLangParser.IF, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SecureLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(SecureLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(SecureLangParser.ELSE, 0)

        def ifStatement(self):
            return self.getTypedRuleContext(SecureLangParser.IfStatementContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_ifStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfStatement" ):
                listener.enterIfStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfStatement" ):
                listener.exitIfStatement(self)




    def ifStatement(self):

        localctx = SecureLangParser.IfStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            self.match(SecureLangParser.IF)
            self.state = 133
            self.expression()
            self.state = 134
            self.block()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 135
                self.match(SecureLangParser.ELSE)
                self.state = 138
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [2]:
                    self.state = 136
                    self.ifStatement()
                    pass
                elif token in [25]:
                    self.state = 137
                    self.block()
                    pass
                else:
                    raise NoViableAltException(self)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(SecureLangParser.WHILE, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(SecureLangParser.BlockContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_whileStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStatement" ):
                listener.enterWhileStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStatement" ):
                listener.exitWhileStatement(self)




    def whileStatement(self):

        localctx = SecureLangParser.WhileStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_whileStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(SecureLangParser.WHILE)
            self.state = 143
            self.expression()
            self.state = 144
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(SecureLangParser.FOR, 0)

        def IDENTIFIER(self):
            return self.getToken(SecureLangParser.IDENTIFIER, 0)

        def IN(self):
            return self.getToken(SecureLangParser.IN, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def block(self):
            return self.getTypedRuleContext(SecureLangParser.BlockContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_forStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterForStatement" ):
                listener.enterForStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitForStatement" ):
                listener.exitForStatement(self)




    def forStatement(self):

        localctx = SecureLangParser.ForStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_forStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 146
            self.match(SecureLangParser.FOR)
            self.state = 147
            self.match(SecureLangParser.IDENTIFIER)
            self.state = 148
            self.match(SecureLangParser.IN)
            self.state = 149
            self.expression()
            self.state = 150
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(SecureLangParser.RETURN, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_returnStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStatement" ):
                listener.enterReturnStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStatement" ):
                listener.exitReturnStatement(self)




    def returnStatement(self):

        localctx = SecureLangParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(SecureLangParser.RETURN)
            self.state = 154
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 153
                self.expression()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(SecureLangParser.ASSIGN, 0)

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def IDENTIFIER(self):
            return self.getToken(SecureLangParser.IDENTIFIER, 0)

        def memberAccess(self):
            return self.getTypedRuleContext(SecureLangParser.MemberAccessContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_assignment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = SecureLangParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_assignment)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.state = 156
                self.match(SecureLangParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.state = 157
                self.memberAccess()
                pass


            self.state = 160
            self.match(SecureLangParser.ASSIGN)
            self.state = 161
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(SecureLangParser.ExpressionContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_expressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressionStatement" ):
                listener.enterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressionStatement" ):
                listener.exitExpressionStatement(self)




    def expressionStatement(self):

        localctx = SecureLangParser.ExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_expressionStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImportStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IMPORT(self):
            return self.getToken(SecureLangParser.IMPORT, 0)

        def dottedName(self):
            return self.getTypedRuleContext(SecureLangParser.DottedNameContext,0)


        def FROM(self):
            return self.getToken(SecureLangParser.FROM, 0)

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.IDENTIFIER)
            else:
                return self.getToken(SecureLangParser.IDENTIFIER, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.COMMA)
            else:
                return self.getToken(SecureLangParser.COMMA, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_importStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImportStatement" ):
                listener.enterImportStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImportStatement" ):
                listener.exitImportStatement(self)




    def importStatement(self):

        localctx = SecureLangParser.ImportStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_importStatement)
        self._la = 0 # Token type
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [8]:
                self.enterOuterAlt(localctx, 1)
                self.state = 165
                self.match(SecureLangParser.IMPORT)
                self.state = 166
                self.dottedName()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 2)
                self.state = 167
                self.match(SecureLangParser.FROM)
                self.state = 168
                self.dottedName()
                self.state = 169
                self.match(SecureLangParser.IMPORT)
                self.state = 170
                self.match(SecureLangParser.IDENTIFIER)
                self.state = 175
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==29:
                    self.state = 171
                    self.match(SecureLangParser.COMMA)
                    self.state = 172
                    self.match(SecureLangParser.IDENTIFIER)
                    self.state = 177
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DottedNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.IDENTIFIER)
            else:
                return self.getToken(SecureLangParser.IDENTIFIER, i)

        def DOT(self, i:int=None):
            if i is None:
                return self.getTokens(SecureLangParser.DOT)
            else:
                return self.getToken(SecureLangParser.DOT, i)

        def getRuleIndex(self):
            return SecureLangParser.RULE_dottedName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDottedName" ):
                listener.enterDottedName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDottedName" ):
                listener.exitDottedName(self)




    def dottedName(self):

        localctx = SecureLangParser.DottedNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_dottedName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 180
            self.match(SecureLangParser.IDENTIFIER)
            self.state = 185
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==31:
                self.state = 181
                self.match(SecureLangParser.DOT)
                self.state = 182
                self.match(SecureLangParser.IDENTIFIER)
                self.state = 187
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orExpr(self):
            return self.getTypedRuleContext(SecureLangParser.OrExprContext,0)


        def getRuleIndex(self):
            return SecureLangParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)




    def expression(self):
